Fix incorrect zipper reset, add `runsuite` task to test local benches.