@@ -143,6 +143,42 @@ object ScalaMeterBuild extends Build {
     case _ => Nil
   }
 
+  val javaCommand = TaskKey[String](
+    "java-command",
+    "Creates a java vm command for launching a process."
+  )
+
+  val javaCommandSetting = javaCommand <<= (
+    dependencyClasspath in Compile,
+    artifactPath in (Compile, packageBin),
+    artifactPath in (Test, packageBin),
+    packageBin in Compile,
+    packageBin in Test
+  ) map {
+    (dp, jar, testjar, pbc, pbt) => // -XX:+UseConcMarkSweepGC  -XX:-DoEscapeAnalysis -XX:MaxTenuringThreshold=12 -XX:+PrintGCDetails 
+    //val cp = dp.map("\"" + _.data + "\"") :+ ("\"" + jar +"\"") :+ ("\"" + testjar + "\"")
+    val cp = dp.map(_.data) :+ jar :+ testjar
+    val javacommand = "java -Xmx2048m -Xms2048m -XX:+UseCondCardMark -verbose:gc -server -cp %s".format(
+      cp.mkString(File.pathSeparator)
+    )
+    javacommand
+  }
+  
+  val runsuiteTask = InputKey[Unit](
+    "runsuite",
+    "Runs the benchmarking suite."
+  ) <<= inputTask {
+    (argTask: TaskKey[Seq[String]]) =>
+    (argTask, javaCommand) map {
+      (args, jc) =>
+      val javacommand = jc
+      val comm = javacommand + " " + "org.scalameter.Main" + " " + args.mkString(" ")
+      streams.map(_.log.info("Executing: " + comm))
+      import sys.process._
+      comm !
+    }
+  }
+
   /* projects */
 
   lazy val scalaMeterCore = Project(
@@ -154,7 +190,7 @@ object ScalaMeterBuild extends Build {
   lazy val scalaMeter = Project(
     "scalameter",
     file("."),
-    settings = scalaMeterSettings
+    settings = scalaMeterSettings ++ Seq(javaCommandSetting, runsuiteTask)
   ) dependsOn (
     scalaMeterCore
   )
